objects/advpm__Offer_And_Demand__c.object
<CustomObject>
    <customHelpPage>advpm__HelpOfferAndDemand</customHelpPage>
    <fields>
        <fullName>advpm__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>advpm__Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter__c</fullName>
        <label>Matter</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipName>Offers_And_Demands</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Originating_Offer_And_Demand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Originating Offer And Demand</label>
        <referenceTo>advpm__Offer_And_Demand__c</referenceTo>
        <relationshipName>Offers_And_Demands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Originator__c</fullName>
        <label>Originator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Receiver__c</fullName>
        <label>Receiver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Offer And Demand</label>
    <nameField>
        <label>Offer Or Demand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer And Demands</pluralLabel>
    <recordTypes>
        <fullName>advpm__Originating_Demand</fullName>
        <active>true</active>
        <label>Originating Demand</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Originating_Offer</fullName>
        <active>true</active>
        <label>Originating Offer</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Responding_Demand</fullName>
        <active>true</active>
        <label>Responding Demand</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Responding_Offer</fullName>
        <active>true</active>
        <label>Responding Offer</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>